--- a/estils.css
+++ b/estils.css
@@ -4,172 +4,145 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   margin: 0;
-  border: 0;
-}
+  border: 0; }
 
 .carcasa {
   margin-left: auto;
   margin-right: auto;
   width: 400px;
   border-radius: 10px;
-  background-color: darkorange;
-  border: 2px solid #e67e00;
-  -webkit-box-shadow: inset 0 2px 0 #ffba66;
-          box-shadow: inset 0 2px 0 #ffba66;
-  /* Botones */
-}
-
-.carcasa p {
-  padding: 0;
-  color: #849a4e;
-  font-weight: 600;
-  font-size: 2em;
-  text-align: right;
-  border: 0;
-  text-shadow: 0;
-  -webkit-box-shadow: 0;
-          box-shadow: 0;
-  margin: 0;
-}
-
-.carcasa h2 {
-  color: #995400;
-  font-weight: 600;
-  font-size: 1.6rem;
-  text-align: center;
-  text-shadow: 0 1px 0 #ffd199;
-  margin: .5rem 0 1rem 0;
-}
-
-.carcasa .pantallaLCD {
-  height: 60px;
-  background-color: #dfe6ce;
-  border: 1px solid #b3c48a;
-  text-shadow: 0 -1px 0 #f5f7f0;
-  -webkit-box-shadow: inset 0 0 10px #b3c48a;
-          box-shadow: inset 0 0 10px #b3c48a;
-}
-
-.carcasa .pantallaLCD #LCD {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  overflow: hidden;
-}
-
-.carcasa .firma {
-  margin-top: 1rem;
-  text-align: right;
-  font-size: 12px;
-  font-weight: 400;
-  color: #995400;
-}
-
-.carcasa .botonCalcu {
-  width: 23%;
-  height: 70px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  font-size: 1.5em;
-  background: #2c9d2c;
-  margin: 3px 1%;
-  border-radius: 8px;
-  font-weight: 500;
-  cursor: pointer;
-  border: 0 solid #268926;
-  -webkit-box-shadow: inset 1px 2px 3px #5dd25d, inset -1px -2px 3px #164d16, 2px 2px 3px 1px #cc7000;
-          box-shadow: inset 1px 2px 3px #5dd25d, inset -1px -2px 3px #164d16, 2px 2px 3px 1px #cc7000;
-  color: #d5f3d5;
-  -webkit-box-shadow: offset;
-          box-shadow: offset;
-}
-
-.carcasa .botonCalcu:hover {
-  background: #37c537;
-}
-
-.carcasa .botonCalcu:active {
-  -webkit-box-shadow: 0 0 0 0;
-          box-shadow: 0 0 0 0;
-  -webkit-transform: scale(0.9);
-          transform: scale(0.9);
-}
-
-.carcasa .botonOp {
-  background-color: #4e9bd5;
-  -webkit-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
-  border: 0 solid #398fd0;
-  -webkit-box-shadow: inset 1px 2px 3px #a0cae9, inset -1px -2px 3px #246799, 2px 2px 3px 1px #cc7000;
-          box-shadow: inset 1px 2px 3px #a0cae9, inset -1px -2px 3px #246799, 2px 2px 3px 1px #cc7000;
-  color: white;
-  -webkit-box-shadow: offset;
-          box-shadow: offset;
-}
-
-.carcasa .botonOp:hover {
-  background: #77b2df;
-}
-
-.carcasa .botonOp:active {
-  -webkit-box-shadow: 0 0 0 0;
-          box-shadow: 0 0 0 0;
-  -webkit-transform: scale(0.9);
-          transform: scale(0.9);
-}
-
-.carcasa .botonRojo {
-  background-color: #d54e4e;
-  -webkit-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
-  border: 0 solid #d03939;
-  -webkit-box-shadow: inset 1px 2px 3px #e9a0a0, inset -1px -2px 3px #992424, 2px 2px 3px 1px #cc7000;
-          box-shadow: inset 1px 2px 3px #e9a0a0, inset -1px -2px 3px #992424, 2px 2px 3px 1px #cc7000;
-  color: white;
-  -webkit-box-shadow: offset;
-          box-shadow: offset;
-}
-
-.carcasa .botonRojo:hover {
-  background: #df7777;
-}
-
-.carcasa .botonRojo:active {
-  -webkit-box-shadow: 0 0 0 0;
-          box-shadow: 0 0 0 0;
-  -webkit-transform: scale(0.9);
-          transform: scale(0.9);
-}
-
-.carcasa .botonResult {
-  background-color: #f2c71a;
-  -webkit-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
-  border: 0 solid #e5ba0d;
-  -webkit-box-shadow: inset 1px 2px 3px #f7df7b, inset -1px -2px 3px #9d8009, 2px 2px 3px 1px #cc7000;
-          box-shadow: inset 1px 2px 3px #f7df7b, inset -1px -2px 3px #9d8009, 2px 2px 3px 1px #cc7000;
-  color: white;
-  -webkit-box-shadow: offset;
-          box-shadow: offset;
-}
-
-.carcasa .botonResult:hover {
-  background: #f5d34a;
-}
-
-.carcasa .botonResult:active {
-  -webkit-box-shadow: 0 0 0 0;
-          box-shadow: 0 0 0 0;
-  -webkit-transform: scale(0.9);
-          transform: scale(0.9);
-}
+  background-color: #396d6d;
+  border: 2px solid #305c5c;
+  -webkit-box-shadow: inset 0 2px 0 #60acac;
+          box-shadow: inset 0 2px 0 #60acac;
+  background-blend-mode: overlay;
+  background-size: cover;
+  /* Botones */ }
+  .carcasa p {
+    padding: 0;
+    color: #849a4e;
+    font-weight: 600;
+    font-size: 2em;
+    text-align: right;
+    border: 0;
+    text-shadow: 0;
+    -webkit-box-shadow: 0;
+            box-shadow: 0;
+    margin: 0; }
+  .carcasa h2 {
+    color: #162a2a;
+    font-weight: 600;
+    font-size: 1.6rem;
+    text-align: center;
+    text-shadow: 0 1px 0 #82bdbd;
+    margin: .5rem 0 1.5rem 0; }
+  .carcasa .pantallaLCD {
+    height: 60px;
+    background-color: #dfe6ce;
+    border: 1px solid #b3c48a;
+    text-shadow: 0 -1px 0 #f5f7f0;
+    -webkit-box-shadow: inset 0 0 10px #b3c48a;
+            box-shadow: inset 0 0 10px #b3c48a; }
+    .carcasa .pantallaLCD #LCD {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      overflow: hidden; }
+  .carcasa .firma {
+    margin-top: 1rem;
+    text-align: right;
+    font-size: 12px;
+    font-weight: 400;
+    color: #162a2a; }
+  .carcasa .botonCalcu {
+    width: 23%;
+    height: 70px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    font-size: 1.5em;
+    background: #96baad;
+    margin: 3px 1%;
+    border-radius: 8px;
+    font-weight: 500;
+    cursor: pointer;
+    border: 0 solid #87b0a1;
+    -webkit-box-shadow: inset 1px 2px 3px #d4e2dd, inset -1px -2px 3px #5d8d7c, 2px 2px 3px 1px #274c4c;
+            box-shadow: inset 1px 2px 3px #d4e2dd, inset -1px -2px 3px #5d8d7c, 2px 2px 3px 1px #274c4c;
+    color: white;
+    -webkit-box-shadow: offset;
+            box-shadow: offset; }
+    .carcasa .botonCalcu:hover {
+      background: #b5cec5; }
+    .carcasa .botonCalcu:active {
+      -webkit-box-shadow: 0 0 0 0;
+              box-shadow: 0 0 0 0;
+      -webkit-transform: scale(0.9);
+          -ms-transform: scale(0.9);
+              transform: scale(0.9); }
+  .carcasa .botonOp {
+    background-color: #269b9d;
+    -webkit-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+    border: 0 solid #218788;
+    -webkit-box-shadow: inset 1px 2px 3px #54d3d5, inset -1px -2px 3px #124a4b, 2px 2px 3px 1px #274c4c;
+            box-shadow: inset 1px 2px 3px #54d3d5, inset -1px -2px 3px #124a4b, 2px 2px 3px 1px #274c4c;
+    color: #cff3f3;
+    -webkit-box-shadow: offset;
+            box-shadow: offset; }
+    .carcasa .botonOp:hover {
+      background: #30c4c6; }
+    .carcasa .botonOp:active {
+      -webkit-box-shadow: 0 0 0 0;
+              box-shadow: 0 0 0 0;
+      -webkit-transform: scale(0.9);
+          -ms-transform: scale(0.9);
+              transform: scale(0.9); }
+  .carcasa .botonRojo {
+    background-color: #a54545;
+    -webkit-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+    border: 0 solid #933d3d;
+    -webkit-box-shadow: inset 1px 2px 3px #cc8484, inset -1px -2px 3px #5d2727, 2px 2px 3px 1px #274c4c;
+            box-shadow: inset 1px 2px 3px #cc8484, inset -1px -2px 3px #5d2727, 2px 2px 3px 1px #274c4c;
+    color: #f9f0f0;
+    -webkit-box-shadow: offset;
+            box-shadow: offset; }
+    .carcasa .botonRojo:hover {
+      background: #bd6060; }
+    .carcasa .botonRojo:active {
+      -webkit-box-shadow: 0 0 0 0;
+              box-shadow: 0 0 0 0;
+      -webkit-transform: scale(0.9);
+          -ms-transform: scale(0.9);
+              transform: scale(0.9); }
+  .carcasa .botonResult {
+    background-color: #f2c71a;
+    -webkit-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+    border: 0 solid #e5ba0d;
+    -webkit-box-shadow: inset 1px 2px 3px #f7df7b, inset -1px -2px 3px #9d8009, 2px 2px 3px 1px #274c4c;
+            box-shadow: inset 1px 2px 3px #f7df7b, inset -1px -2px 3px #9d8009, 2px 2px 3px 1px #274c4c;
+    color: white;
+    -webkit-box-shadow: offset;
+            box-shadow: offset; }
+    .carcasa .botonResult:hover {
+      background: #f5d34a; }
+    .carcasa .botonResult:active {
+      -webkit-box-shadow: 0 0 0 0;
+              box-shadow: 0 0 0 0;
+      -webkit-transform: scale(0.9);
+          -ms-transform: scale(0.9);
+              transform: scale(0.9); }
