--- a/sass/estils.scss
+++ b/sass/estils.scss
@@ -1,9 +1,9 @@
 // Colors
-$carcasa: rgb(255, 140, 0);
-$btnNums: rgb(44, 157, 44);
-$btnOp: rgb(78, 155, 213);
+$carcasa: rgb(57, 109, 109);
+$btnNums: rgb(150, 186, 173);
+$btnOp: rgb(38, 155, 157);
 $btnResult: rgb(242, 199, 26);
-$btnReset: rgb(213, 78, 78);
+$btnReset: rgb(165, 69, 69);
 $LCD: rgb(223, 230, 206);
 
 // mixins
@@ -43,6 +43,8 @@ $LCD: rgb(223, 230, 206);
     background-color: $carcasa;
     border: 2px solid darken($carcasa, 5%);
     box-shadow: inset 0 2px 0 lighten($carcasa, 20%);
+    background-blend-mode: overlay;
+    background-size: cover;
 
     p {
         padding: 0;
@@ -62,7 +64,7 @@ $LCD: rgb(223, 230, 206);
         font-size: 1.6rem;
         text-align: center;
         text-shadow: 0 1px 0 lighten($carcasa, 30%);
-        margin: .5rem 0 1rem 0;
+        margin: .5rem 0 1.5rem 0;
     }
 
     .pantallaLCD {
